--- a/menu/eventos/feira da agricultura/index.html
+++ b/menu/eventos/feira da agricultura/index.html
@@ -259,7 +259,7 @@
 <!--menu-->
 <nav>
   <ul id="nav-menu">
-    <li><a href="#">Início</a></li>
+    <li><a href="https://secretariadeagricultura.github.io/principal/">Início</a></li>
     <li><a href="#">Eventos</a>
       <ul>
         <li><a href="#">Feiras da Agricultura e Empreendedorismo</a></li>
