--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   <div class="menu-toggle" onclick="toggleMenu()">☰ Menu</div>
   <nav>
     <ul id="nav-menu">
-      <li><a href="#">Início</a></li>
+      <li><a href="https://secretariadeagricultura.github.io/principal/">Início</a></li>
       <li>
         <a href="#">Eventos</a>
         <ul>
