--- a/menu/programas/PAA/index.html
+++ b/menu/programas/PAA/index.html
@@ -237,7 +237,7 @@
         </ul>
       </li>
       <li>
-        <a href="#">Programas</a>
+        <a href="principal/programas">Programas</a>
         <ul>
           <li><a href="#">PAA Alimentos</a></li>
           <li><a href="#">Alevinos</a></li>
