--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       <li>
         <a href="#">Programas</a>
         <ul>
-          <li><a href="programas/PAA/index.html">PAA Alimentos</a></li>
+          <li><a href="menu/programas/PAA/index.html">PAA Alimentos</a></li>
           <li><a href="#">Alevinos</a></li>
           <li><a href="#">Secretaria Itinerante</a></li>
           <li><a href="#">Horta Comunitária</a></li>
