--- a/menu/programas/PAA/index.html
+++ b/menu/programas/PAA/index.html
@@ -266,15 +266,15 @@
   <div class="slider">
     <div class="slide active">
       <img src="imagens/slide1.jpg" alt="Agricultores vendendo produtos" />
-      <p class="caption">Agricultores expondo produtos frescos na feira.</p>
+      <p class="caption">Formação na Secretaria de Estado da Agricultura Familiar - SAF para implantação do PAA nos municípios.</p>
     </div>
     <div class="slide">
       <img src="imagens/slide2.jpg" alt="Barracas organizadas" />
-      <p class="caption">Estrutura organizada valoriza o empreendedor local.</p>
+      <p class="caption">Formação na Secretaria de Estado da Agricultura Familiar - SAF para implantação do PAA nos municípios.</p>
     </div>
     <div class="slide">
       <img src="imagens/slide3.jpg" alt="Produtos agroecológicos" />
-      <p class="caption">Produtos saudáveis e agroecológicos acessíveis.</p>
+      <p class="caption">Formação na Secretaria de Estado da Agricultura Familiar - SAF para implantação do PAA nos municípios.</p>
     </div>
     <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
     <button class="next" onclick="moveSlide(1)">&#10095;</button>
