--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
       <p>Exposição de produtos agículas e artesanato da nossa cidade.</p>
     </div>
     <div class="evento">
-      <img src="imagens/programa2.jpg" alt="Evento 2">
+      <a href="menu/programas/PAA/index.html"><img src="imagens/programa2.jpg" alt="Evento 2">
       <h3>PAA - Programa de aquisição de alimentos</h3>
-      <p>Compra direta de agricultores para abastecer instituições sociais.</p>
+      <p>Compra direta de agricultores para abastecer instituições sociais.</p></a>
     </div>
     <div class="evento">
       <img src="imagens/programa3.jpg" alt="Evento 3">
