--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
     .evento h3 {
       font-size: 1.5em;
       margin: 15px;
+      color: #000000;
+      text-decoration: none;
+    }
+
+    .evento a {
+      text-decoration: none;
     }
 
     .evento p {
