--- a/menu/programas/PAA/index.html
+++ b/menu/programas/PAA/index.html
@@ -276,6 +276,26 @@
       <img src="imagens/slide3.jpg" alt="Produtos agroecológicos" />
       <p class="caption">Formação na Secretaria de Estado da Agricultura Familiar - SAF para implantação do PAA nos municípios.</p>
     </div>
+    <div class="slide">
+      <img src="imagens/primeira entrega/1.jpg" alt="Produtos agroecológicos" />
+      <p class="caption">1º Primeira entrega do PAA</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/primeira entrega/2.jpg" alt="Produtos agroecológicos" />
+      <p class="caption">1º Primeira entrega do PAA</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/primeira entrega/3.jpg" alt="Produtos agroecológicos" />
+      <p class="caption">1º Primeira entrega do PAA</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/primeira entrega/4.jpg" alt="Produtos agroecológicos" />
+      <p class="caption">1º Primeira entrega do PAA</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/primeira entrega/5.jpg" alt="Produtos agroecológicos" />
+      <p class="caption">1º Primeira entrega do PAA</p>
+    </div>
     <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
     <button class="next" onclick="moveSlide(1)">&#10095;</button>
   </div>
