--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
 
   <section class="eventos">
     <div class="evento">
-      <a href="menu/eventos/feira da agricultura/index.html"></a><img src="imagens/programa1.jpg" alt="Evento 1">
+      <a href="menu/eventos/feira da agricultura/index.html"><img src="imagens/programa1.jpg" alt="Evento 1">
       <h3>Feira da Agricultura e Empreendedorismo</h3>
-      <p>Exposição de produtos agículas e artesanato da nossa cidade.</p>
+      <p>Exposição de produtos agículas e artesanato da nossa cidade.</p></a>
     </div>
     <div class="evento">
       <a href="menu/programas/PAA/index.html"><img src="imagens/programa2.jpg" alt="Evento 2">
