links nos menus

--- a/menu/eventos/feira da agricultura/index.html
+++ b/menu/eventos/feira da agricultura/index.html
@@ -262,20 +262,20 @@
     <li><a href="https://secretariadeagricultura.github.io/principal/">Início</a></li>
     <li><a href="#">Eventos</a>
       <ul>
-        <li><a href="#">Feiras da Agricultura e Empreendedorismo</a></li>
-        <li><a href="#">Oficinas e formações</a></li>
-        <li><a href="#">Seminários</a></li>
+        <li><a href="menu/eventos/feira da agricultura/index.html">Feiras da Agricultura e Empreendedorismo</a></li>
+        <li><a href="menu/eventos/oficinas e formações/index.html">Oficinas e formações</a></li>
+        <li><a href="menu/eventos/seminários/index.html">Seminários</a></li>
       </ul>
     </li>
     <li><a href="#">Programas</a>
       <ul>
-        <li><a href="#">PAA Alimentos</a></li>
-        <li><a href="#">Alevinos</a></li>
-        <li><a href="#">Secretaria Itinerante</a></li>
-        <li><a href="#">Horta Comunitária</a></li>
+        <li><a href="menu/programas/PAA/index.html">PAA Alimentos</a></li>
+        <li><a href="menu/programas/alevinos/index.html">Alevinos</a></li>
+        <li><a href="menu/programas/secretaria intinerante/index.html">Secretaria Itinerante</a></li>
+        <li><a href="menu/programas/horta comunitária/index.html">Horta Comunitária</a></li>
       </ul>
     </li>
-    <li><a href="#">Contato</a></li>
+    <li><a href="menu/contatos/index.html">Contato</a></li>
   </ul>
 </nav>
 
@@ -297,16 +297,22 @@
     </div>
 
     <!--caixa box 2-->
-    <div class="evento" onclick="window.location.href='https://linkevento2.com'">
+    <div class="evento" onclick="window.location.href='feiras/março/index.html'">
       <img src="imagens/programa2.jpg" alt="Evento 2">
       <h3>Feira - Março</h3>
       <p>Exposição de produtos agrícolas e artesanato da nossa cidade.</p>
     </div>
 
     <!--caixa box 3-->
-    <div class="evento" onclick="window.location.href='https://linkevento3.com'">
+    <div class="evento" onclick="window.location.href='feiras/abril/index.html'">
       <img src="imagens/programa3.jpg" alt="Evento 3">
       <h3>Feira - Abril</h3>
+      <p>Exposição de produtos agrícolas e artesanato da nossa cidade.</p>
+    </div>
+    <!--caixa box 4-->
+    <div class="evento" onclick="window.location.href='feiras/maio/index.html'">
+      <img src="imagens/programa3.jpg" alt="Evento 3">
+      <h3>Feira - Maio</h3>
       <p>Exposição de produtos agrícolas e artesanato da nossa cidade.</p>
     </div>
   </div>
