--- a/menu/programas/PAA/index.html
+++ b/menu/programas/PAA/index.html
@@ -239,13 +239,13 @@
       <li>
         <a href="principal/programas">Programas</a>
         <ul>
-          <li><a href="#">PAA Alimentos</a></li>
-          <li><a href="#">Alevinos</a></li>
-          <li><a href="#">Secretaria Itinerante</a></li>
-          <li><a href="#">Horta Comunitária</a></li>
+          <li><a href="menu/programas/PAA/index.html">PAA Alimentos</a></li>
+          <li><a href="menu/programas/alevinos/index.html">Alevinos</a></li>
+          <li><a href="menu/programas/secretaria intinerante/index.html">Secretaria Itinerante</a></li>
+          <li><a href="menu/programas/horta comunitária/index.html">Horta Comunitária</a></li>
         </ul>
       </li>
-      <li><a href="#">Contato</a></li>
+      <li><a href="menu/contatos/index.html">Contato</a></li>
     </ul>
   </nav>
 
