links nos menus

--- a/menu/programas/PAA/index.html
+++ b/menu/programas/PAA/index.html
@@ -231,21 +231,21 @@
       <li>
         <a href="#">Eventos</a>
         <ul>
-          <li><a href="menu/eventos/feira da agricultura/index.html">Feiras da Agricultura e Empreendedorismo</a></li>
-          <li><a href="#">Oficinas e formações</a></li>
-          <li><a href="#">Seminários</a></li>
+          <li><a href="principal/menu/eventos/feira da agricultura/index.html">Feiras da Agricultura e Empreendedorismo</a></li>
+          <li><a href="principal/menu/eventos/oficinas e formações/index.html">Oficinas e formações</a></li>
+          <li><a href="principal/menu/eventos/seminários/index.html">Seminários</a></li>
         </ul>
       </li>
       <li>
-        <a href="principal/programas">Programas</a>
+        <a href="#">Programas</a>
         <ul>
-          <li><a href="menu/programas/PAA/index.html">PAA Alimentos</a></li>
-          <li><a href="menu/programas/alevinos/index.html">Alevinos</a></li>
-          <li><a href="menu/programas/secretaria intinerante/index.html">Secretaria Itinerante</a></li>
-          <li><a href="menu/programas/horta comunitária/index.html">Horta Comunitária</a></li>
+          <li><a href="principal/menu/programas/PAA/index.html">PAA Alimentos</a></li>
+          <li><a href="principal/menu/programas/alevinos/index.html">Alevinos</a></li>
+          <li><a href="principal/menu/programas/secretaria intinerante/index.html">Secretaria Itinerante</a></li>
+          <li><a href="principal/menu/programas/horta comunitária/index.html">Horta Comunitária</a></li>
         </ul>
       </li>
-      <li><a href="menu/contatos/index.html">Contato</a></li>
+      <li><a href="principal/menu/contatos/index.html">Contato</a></li>
     </ul>
   </nav>
 
